--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body style="background-color:#BBFFDB;">
  <font face = "Verdana" size = "10"> <center><strong> NOVA ESKWELA </strong></center> </font><br />
  <font face = "Verdana" size = "3">-A program that strictly implements a no smoking/e-smoking policy inside and outside the school’s premises. To maintain the health of everyone's lungs, every institution that regulates this policy promotes smoke-free conditions for educators and students.</font><br />
-
+<font face = "Verdana" size = "3">-The faculty/guards will now be alerted about the use of e-cigarettes and will confiscate any e-cigarettes, either from students or from anywhere they find one.</font><br />
+<font face = "Verdana" size = "3">-There will be signs posted around the common area, advocating the dangers of e-cigarettes as well as the punishment of confiscation.</font><br />
+<font face = "Verdana" size = "3">-Bag inspections will be implemented to students, teachers, and guests who are entering the campus. Students who are caught with vapes will be confiscated and will be reported to their parents through text and email immediately. While teachers and guests will be warned.</font><br />
 <br>
 
 
